--- a/SportsApp/Base.lproj/Main.storyboard
+++ b/SportsApp/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="QrF-Ye-BPX">
     <device id="retina5_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
@@ -148,22 +148,22 @@
                                             <outlet property="delegate" destination="qxn-Ia-eCA" id="gEK-YG-27w"/>
                                         </connections>
                                     </tableView>
-                                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="mPj-FI-XQq">
+                                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" pagingEnabled="YES" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="mPj-FI-XQq">
                                         <rect key="frame" x="0.0" y="8" width="414" height="176"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                         <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Kyg-nZ-Fgd">
-                                            <size key="itemSize" width="308" height="169"/>
+                                            <size key="itemSize" width="308" height="170"/>
                                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                         </collectionViewFlowLayout>
                                         <cells>
-                                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="cellh1" id="9Sl-6G-Jlo">
-                                                <rect key="frame" x="0.0" y="3.6666666666666665" width="308" height="169"/>
+                                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="cellh1" id="9Sl-6G-Jlo" customClass="UpCommingCollectionViewCell" customModule="SportsApp" customModuleProvider="target">
+                                                <rect key="frame" x="0.0" y="3" width="308" height="170"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="iJM-Vy-M8D">
-                                                    <rect key="frame" x="0.0" y="0.0" width="308" height="169"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="308" height="170"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <subviews>
                                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="SDQ-Cg-rf3">
@@ -206,7 +206,7 @@
                                                             <rect key="frame" x="141" y="72.333333333333329" width="25" height="24"/>
                                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                                            <color key="textColor" red="0.069541178640000006" green="0.194313705" blue="0.051444403829999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="10-02-2021" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cPO-Sc-159">
@@ -218,7 +218,17 @@
                                                         </label>
                                                     </subviews>
                                                 </collectionViewCellContentView>
-                                                <size key="customSize" width="308" height="169"/>
+                                                <color key="backgroundColor" red="0.069541178643703461" green="0.19431370496749878" blue="0.051444403827190399" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <size key="customSize" width="308" height="170"/>
+                                                <connections>
+                                                    <outlet property="dateLabeel" destination="cPO-Sc-159" id="kGp-uD-2VU"/>
+                                                    <outlet property="imageView1" destination="SDQ-Cg-rf3" id="Uy5-gY-SzT"/>
+                                                    <outlet property="imageView2" destination="OMb-8I-RIV" id="3xY-la-G9F"/>
+                                                    <outlet property="labelCounter1" destination="rfM-fe-EKG" id="PWH-Dr-pbg"/>
+                                                    <outlet property="labelCounter2" destination="i7m-n1-2yM" id="cOw-Pt-5EM"/>
+                                                    <outlet property="view1" destination="pmp-5y-ObZ" id="ycf-fR-f5O"/>
+                                                    <outlet property="view2" destination="YPH-t5-lhK" id="aiQ-ch-jra"/>
+                                                </connections>
                                             </collectionViewCell>
                                         </cells>
                                     </collectionView>
@@ -227,26 +237,29 @@
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                         <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="B1m-Ox-i8j">
-                                            <size key="itemSize" width="169" height="156"/>
+                                            <size key="itemSize" width="185" height="144"/>
                                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                         </collectionViewFlowLayout>
                                         <cells>
-                                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="cellh2" id="2b1-SM-wLZ">
-                                                <rect key="frame" x="0.0" y="0.0" width="169" height="156"/>
+                                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="cellh2" id="2b1-SM-wLZ" customClass="TeamsCollectionViewCell" customModule="SportsApp" customModuleProvider="target">
+                                                <rect key="frame" x="0.0" y="0.0" width="185" height="144"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="MJe-sC-lVQ">
-                                                    <rect key="frame" x="0.0" y="0.0" width="169" height="156"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="185" height="144"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <subviews>
                                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="v9R-Fj-r7e">
-                                                            <rect key="frame" x="0.0" y="0.0" width="169" height="148"/>
+                                                            <rect key="frame" x="8" y="0.0" width="169" height="148"/>
                                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                         </imageView>
                                                     </subviews>
                                                 </collectionViewCellContentView>
-                                                <size key="customSize" width="169" height="156"/>
+                                                <size key="customSize" width="185" height="144"/>
+                                                <connections>
+                                                    <outlet property="teamImageViw" destination="v9R-Fj-r7e" id="wPr-ts-amk"/>
+                                                </connections>
                                             </collectionViewCell>
                                         </cells>
                                     </collectionView>
@@ -260,10 +273,14 @@
                     </view>
                     <navigationItem key="navigationItem" id="G1P-mb-w9O"/>
                     <size key="freeformSize" width="414" height="900"/>
+                    <connections>
+                        <outlet property="teamsCollectionView" destination="Soa-Hi-lT6" id="H3g-Fd-Icq"/>
+                        <outlet property="upcommingCollectionView" destination="mPj-FI-XQq" id="jcN-Jz-0N4"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="EN4-qR-fcO" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2584.057971014493" y="804.61956521739137"/>
+            <point key="canvasLocation" x="2765" y="721"/>
         </scene>
         <!--Home-->
         <scene sceneID="FMo-lk-o0k">
